Responsive web design on login.htmll

--- a/css/login.css
+++ b/css/login.css
@@ -109,4 +109,13 @@ body {
   max-height: 1000px;
   height: 100%;
 }
+
+@media screen and (max-width: 656px) {
+  .padre .izq {
+    width: 100%;
+  }
+  .padre .der {
+    display: none;
+  }
+}
 /*# sourceMappingURL=login.css.map */
