--- a/css/login.scss
+++ b/css/login.scss
@@ -101,3 +101,14 @@ body {
         }
     }
 }
+
+@media screen and (max-width: 656px){
+    .padre{
+        .izq{
+            width: 100%;
+        }
+        .der{
+            display: none;
+        }
+    }
+}
