Adding UI for edit vaca section

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5393,9 +5393,7 @@ thead tr th {
   color: #455a64;
   font-weight: 500;
 }
-thead tr th:last-child {
-  text-align: right;
-}
+
 tbody tr th {
   color: #455a64;
   font-family: 'Poppins', sans-serif;
@@ -5405,9 +5403,7 @@ tbody tr td {
   font-family: 'Poppins', sans-serif;
   color: #99abb4;
 }
-tbody tr td:last-child {
-  text-align: right;
-}
+
 .table > tbody > tr > td,
 .table > tbody > tr > th,
 .table > tfoot > tr > td,
@@ -5457,6 +5453,7 @@ tbody tr td:last-child {
 .table td,
 .table th {
   padding: 0.55rem;
+  text-align: center;
 }
 .table .round-img img {
   width: 38px;
